# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-waveshare-epd"
description = "CircuitPython `displayio` drivers for Waveshare-based ePaper displays"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Falco Gerritsjans", email = "contact@falco.pro"}
]
urls = {Homepage = "https://github.com/adafruit/Adafruit_CircuitPython_SSD1680"}
keywords = [
    "blinka",
    "circuitpython",
    "micropython",
    "2in66b",
    "waveshare",
    "displayio",
    "epd",
    "epaper",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["waveshare_epd_driver"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
